@@ -1,3 +1,4 @@
+Enabled "holding down the spinner" to cycle through the numbers at a medium speed
 Changed max denominator back to 8
 Fixed: Cursor hand should turn into an arrow when spinner button disables
 Fixed: When pressing toggle button, mouse hand should turn into an arrow
